--- a/front_end/helloapp/index.html
+++ b/front_end/helloapp/index.html
@@ -3,6 +3,7 @@
 <head>
 
     <meta charset="utf-8" />
+    <base href="/" />
     <title>Monitoring for the application travel-planner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.css" rel="stylesheet">
