--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <base href="/" />
+    <!--<base href="/" />-->
+    <script>document.write('<base href="' + document.location + '" />');</script>
+
     <title>Monitoring for the application travel-planner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.css" rel="stylesheet">
