update monitoring front end

--- a/front_end/helloapp/index.html
+++ b/front_end/helloapp/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <!--<base href="/" />-->
+    <link rel="shortcut icon" href="favicon1.png" type="image/png">
     <script>document.write('<base href="' + document.location + '" />');</script>
 
-    <title>Monitoring for the application travel-planner</title>
+    <title>Service Bus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
